<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="#dddddd"
        android:onClick="onOn_Off"
        android:text="@string/start" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout6"
        android:layout_alignParentRight="true"
        android:backgroundTint="#dddddd"
        android:onClick="onSwap"
        android:text="@string/cpb1" />

    <RelativeLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="20dp" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/layout0"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/las" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/noData"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/textView12"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/toggle1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="onFS" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/layout1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/leq" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/noData"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/layout2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/lamax" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/noData"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/textView32"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/toggle3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:onClick="onMLN" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/layout3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/lcp" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="@string/noData"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout6"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@id/layout4"
        android:orientation="horizontal" >

        <jh.slm.commonaclasses.Yaxis
            android:id="@+id/view01"
            android:layout_width="25dp"
            android:layout_height="175dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <jh.slm.commonaclasses.Yaxis
            android:id="@+id/view02"
            android:layout_width="25dp"
            android:layout_height="175dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <jh.slm.commonaclasses.Yaxis
            android:id="@+id/view03"
            android:layout_width="25dp"
            android:layout_height="175dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <jh.slm.commonaclasses.SpectrumView
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@id/view01"
            android:layout_toRightOf="@id/view01" />

        <jh.slm.commonaclasses.SpectrumView
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@id/view02"
            android:layout_toRightOf="@id/view02" />

        <jh.slm.commonaclasses.SpectrumView
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignBottom="@id/view03"
            android:layout_toRightOf="@id/view03" />

        <jh.slm.commonaclasses.Xaxis
            android:id="@+id/view11"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@id/view1"
            android:layout_alignLeft="@id/view1"
            android:layout_alignRight="@id/view1" />""

        <jh.slm.commonaclasses.Xaxis
            android:id="@+id/view12"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@id/view2"
            android:layout_alignLeft="@id/view2"
            android:layout_alignRight="@id/view2" />"

        <jh.slm.commonaclasses.Xaxis
            android:id="@+id/view13"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@id/view3"
            android:layout_alignLeft="@id/view3"
            android:layout_alignRight="@id/view3" />"
    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout6"
        android:layout_centerHorizontal="true"
        android:gravity="right"
        android:text="@string/noData"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:gravity="right"
        android:text="@string/noData"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/layout6"
        android:backgroundTint="#dddddd"
        android:onClick="onReset"
        android:text="@string/reset" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layout6"
        android:backgroundTint="#dddddd"
        android:onClick="onPC"
        android:text="@string/pc" />

    <RelativeLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/navg" />

        <jh.slm.commonaclasses.MyEditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView7"
            android:ems="3"
            android:inputType="number"
            android:text="20" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/editText5"
            android:text="@string/gain" />

        <jh.slm.commonaclasses.MyEditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView8"
            android:ems="3"
            android:inputType="numberSigned|numberDecimal"
            android:text="0.0" />
    </RelativeLayout>

</RelativeLayout>